[gd_scene load_steps=2 format=3 uid="uid://bctofe3evto16"]

[ext_resource type="Script" path="res://stonemine/StoneClickerScript.gd" id="2_hvy4q"]

[node name="StoneClicker" type="Control" node_paths=PackedStringArray("labelStone", "labelDigger", "buttonDigger", "diggerTimer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_hvy4q")
labelStone = NodePath("ValueStone")
labelDigger = NodePath("ValueDigger")
buttonDigger = NodePath("PanelContainer/MarginContainer/GridContainer/ButtonDigger")
diggerTimer = NodePath("DiggerTimer")

[node name="ValueStone" type="Label" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 23.0
text = "Stone: 0"
horizontal_alignment = 1

[node name="ButtonDig" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -47.0
offset_right = 140.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "Dig"

[node name="ValueDigger" type="Label" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 8.0
offset_right = 916.0
offset_bottom = 35.0
text = "Diggers: 0"

[node name="DiggerTimer" type="Timer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 945.0
offset_right = 1150.0
offset_bottom = 645.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MainUiButton" type="Button" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ButtonDigger" type="Button" parent="PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Acquire digger: 10 stone"

[connection signal="button_down" from="ButtonDig" to="." method="_on_button_dig_button_down"]
[connection signal="timeout" from="DiggerTimer" to="." method="_on_digger_timer_timeout"]
[connection signal="button_down" from="PanelContainer/MarginContainer/GridContainer/MainUiButton" to="." method="_on_main_ui_button_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/GridContainer/ButtonDigger" to="." method="_on_button_digger_button_down"]
